Fix an overflow bug.

--- a/src/components/equipment/Equipment.css
+++ b/src/components/equipment/Equipment.css
@@ -5,7 +5,7 @@
   opacity: 0;
   transform: scale(1.1);
   transition: opacity 2s, transform 2s;
-  overflow-x: hidden; /* Account for scale transform */
+  overflow: hidden; /* Account for scale transform */
 }
 
 .equipment--visible {
